<resources>
    <string name="app_name">Infocaliper Sms</string>
    <string name="app_description">Infocaliper Sms Gateway</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="create_account"> Sign Up</string>
    <string name="action_sign_in">Sign In</string>
    <string name="different_login">Sign in with another account</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="app_service_name" >SMS Sending Service</string>

    <string name="sms_title_permission">Message Access Required</string>
    <string name="sms_text_permission">Allow @string/app_description to send and receive messages </string>
</resources>
